# Cue-evenRealitiesG2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cue/: __init__.py  app.py  audio.py  config.py  db.py  demo_seed.py  embed.py  enroll.py  hud.py  match.py  note.py  recognize.py  sdk_bridge.py  stt.py  summarize.py  translate.py
cue_plugin/: index.html  package-lock.json  package.json  vite.config.ts
cue_plugin/src/: App.tsx  main.tsx
docs/: Cue-Pitch.pptx  PITCH_SCRIPT.md
scripts/: build_demo_screenshots.py  build_pitch_deck.py  db_status.py  e2e_test.py  generate_fixtures.py  seed_pitch_data.py  smoke_audio.py  smoke_bridge.py
tests/: test_db.py  test_embed.py  test_enroll.py  test_match.py  test_recognize_e2e.py
translator/: index.html  server.py
