[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cue"
version = "0.1.0"
description = "Cue — ambient social memory for Even G2. Voiceprint-based local-first recognition."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Cue team" }]
dependencies = [
  "resemblyzer>=0.1.4",
  "faster-whisper>=1.0.3",
  "silero-vad>=5.1",
  "sounddevice>=0.4.7",
  # numpy<2 — torch 2.2 wasn't built against the NumPy 2.x C API.
  "numpy>=1.26,<2",
  # setuptools<81 — webrtcvad (via resemblyzer) imports pkg_resources,
  # which was removed in setuptools 81+.
  "setuptools<81",
  "soundfile>=0.12.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
blurb = ["anthropic>=0.40.0"]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cue = "cue.app:main"

[tool.setuptools.packages.find]
include = ["cue*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: requires downloaded ML models (Whisper, Resemblyzer)",
]
